[project]
name = "redlite"
dynamic = ["version"]
authors = [
    {name = "Mike Kroutikov", email = "mkroutikov@innodata.com"},
    {name = "David Nadeau", email = "dnadeau@innodata.com"},
]
description = "LLM testing on steroids"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["large langualge models", "evaluation", "datasets"]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "duoname~=0.0.2",
    "tqdm",
]

[project.urls]
Homepage      = "https://github.com/innodatalabs/redlite"
Documentation = "https://innodatalabs.github.io/redlite"
Repository    = "https://github.com/innodatalabs/redlite.git"
Issues        = "https://github.com/innodatalabs/redlite/issues"

[project.optional-dependencies]
hf = ["datasets"]
server = ["aiohttp", "aiohttp-cors"]
openai = ["openai"]
zeno = ["zeno_client"]
rouge = ["rouge-score"]
bleu = ["nltk"]
all = ["redlite[hf,server,openai,zeno,rouge,nltk]"]
dev = [
    "pytest",
    "twine",
    "portray",
    "black",
    "flake8",
    "mypy",
    "pytest-asyncio",
    "pytest-aiohttp"
]

[project.scripts]
redlite = "redlite.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "redlite.__version__"}

[tool.setuptools]
packages = [
    "redlite",
    "redlite.server",
    "redlite.metric",
    "redlite.metric.rouge",
    "redlite.metric.bleu",
    "redlite.metric.f1",
    "redlite.dataset",
    "redlite.model",
    "redlite.zeno",
]

[tool.setuptools.package-data]
"redlite.server" = [
    "resources/legacy/*",
    "resources/legacy/*/*",
    "resources/legacy/*/*/*",
    "resources/legacy/*/*/*/*",
    "resources/default/*",
    "resources/default/*/*",
    "resources/default/*/*/*",
]

[tool.portray.mkdocs]
repo_name = "GitHub: innodatalabs/redlite"
repo_url = "https://github.com/innodatalabs/redlite"
edit_uri = "edit/master/"
# extra = {homepage = "https://example.com"}
markdown_extensions = [
    "pymdownx.inlinehilite",
    "pymdownx.snippets",
    "pymdownx.superfences",
]

[tool.portray.mkdocs.theme]
favicon = "art/redlite.svg"
logo = "art/redlite.svg"
name = "material"
# palette = {primary = "deep purple", accent = "pink"}

[tool.portray.pdocs]
exclude_source = true

[[tool.portray.mkdocs.nav]]
Home = "README.md"

[[tool.portray.mkdocs.nav]]
Quickstart = "docs/quickstart.md"

[[tool.portray.mkdocs.nav]]
Models = "docs/models.md"

[[tool.portray.mkdocs.nav]]
Metrics = "docs/metrics.md"

[[tool.portray.mkdocs.nav]]
Customize = "docs/custom.md"

[tool.mypy]
enable_error_code = [
    "ignore-without-code"
]
show_error_codes = true
warn_unused_ignores = true
